fixing spacing

--- a/myPage.css
+++ b/myPage.css
@@ -61,5 +61,5 @@ video{
 }
 
 .hack{
-	height: 10px;
+	height: 2px;
 }
